# BT-Control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_btstack.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build.yml
main/: CMakeLists.txt  crc.c  crc.h  crsf.c  crsf.h  crsf_protocol.h  gamepad.c  main.c  queue_handler.h  uart_async_rxtxtasks_main.c
